--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -5,22 +5,24 @@
 }
 
 .logo {
-  color: #003BE5;
-  font-size: 2,5rem;
+  color: #003be5;
+  font-size: 2.5rem;
   font-weight: 300;
 }
+
 .chunk2 {
-  color: #2FC18C;
-  font-size: 2,5rem;
+  color: #2fc18c;
+  font-size: 2.5rem;
   font-weight: 900;
 }
+
 .expenses {
-  align-items: center;    
-  color: #003BE5;
+  align-items: center;
+  color: #003be5;
   display: flex;
   font-size: 1rem;
 }
 
 .userEmail {
-  color: #2FC18C;
+  color: #2fc18c;
 }
