--- a/src/css/WalletForm.css
+++ b/src/css/WalletForm.css
@@ -1,14 +1,25 @@
+#root {
+  align-items: flex-start;
+  background-color: white;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  width: 100%;
+}
+
 .form {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 1000px;
 }
 
 .label {
-	color: #003be5;
-	font-weight: 700;
+  color: #003be5;
+  font-size: 1rem;
+  font-weight: 700;
   margin-left: 20px;
   margin-top: 10px;
 }
@@ -33,6 +44,7 @@
   border: 1px solid #003be5;
   border-radius: 5px;
   color: #003be5;
+  font-size: 1rem;
   font-weight: 400;
   height: 30px;
   margin-left: 5px;
@@ -43,11 +55,11 @@
   border: 1px solid #003be5;
   border-radius: 5px;
   color: #003be5;
+  font-size: 1rem;
+  font-weight: 300;
   height: 30px;
   margin-left: 5px;
   width: 155px;
-  font-size: 1rem;
-  font-weight: 300;
 }
 
 .currency {
@@ -62,35 +74,35 @@
 }
 
 .method {
-	border: 1px solid #003be5;
-	border-radius: 5px;
-	color: #003be5;
-	font-size: 1rem;
-	font-weight: 300;
-	height: 30px;
-	margin-left: 5px;
-	width: 230px;
+  border: 1px solid #003be5;
+  border-radius: 5px;
+  color: #003be5;
+  font-size: 1rem;
+  font-weight: 300;
+  height: 30px;
+  margin-left: 5px;
+  width: 230px;
 }
 
 .valor {
-	border: 1px solid #003be5;
-	border-radius: 5px;
-	color: #003be5;
-	font-size: 1rem;
-	font-weight: 300;
-	height: 30px;
-	margin-left: 5px;
-	width: 160px;
+  border: 1px solid #003be5;
+  border-radius: 5px;
+  color: #003be5;
+  font-size: 1rem;
+  font-weight: 300;
+  height: 30px;
+  margin-left: 5px;
+  width: 160px;
 }
 
 .button {
-	background-color: #2fc18c;
-	border: 1px solid #2fc18c;
-	border-radius: 5px;
-	color: white;
-	font-size: 1rem;
-	font-weight: 700;
-	height: 40px;
-	margin: 20px;
-	width: 330px;
-	}
+  background-color: #2fc18c;
+  border: 1px solid #2fc18c;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  font-weight: 700;
+  height: 40px;
+  margin: 20px;
+  width: 330px;
+}
