css login sem root

--- a/src/css/WalletForm.css
+++ b/src/css/WalletForm.css
@@ -1,19 +1,18 @@
-#root {
+/* #root {
   align-items: flex-start;
   background-color: white;
   display: flex;
   height: 100vh;
   justify-content: center;
   width: 100%;
-}
+} */
 
 .form {
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 1000px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .label {
