--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -6,18 +6,17 @@
   justify-content: center;
   width: 100vmax;
 }
+
 .loginComponent {
   align-content: center;
   background-color: white;
   border-radius: 10px;
   box-shadow: -4px 9px 13px rgba(3, 107, 82, 0.3);
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   height: 355px;
   justify-content: center;
   width: 525px;
-
 }
 
 .logo {
@@ -25,7 +24,7 @@
   font-size: 2.5rem;
   font-weight: 300;
 }
-  
+
 .chunk2 {
   color: #2fc18c;
   font-size: 2.5rem;
@@ -33,7 +32,7 @@
 }
 
 ::placeholder {
-  color:#003BE5;  
+  color:#003be5;
 }
 
 .formLogin {
@@ -56,8 +55,8 @@
 }
 
 .buttonLogin {
-  background: #003BE5;
-  border: 1px solid #003BE5;
+  background: #003be5;
+  border: 1px solid #003be5;
   border-radius: 5px;
   color: white;
   font-size: 1rem;
