--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,7 +1,11 @@
 .header {
   align-items: center;
+  background-color: white;
+  box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
   display: flex;
   justify-content: space-around;
+  max-width: 1037px;
+  width: 100%;
 }
 
 .logo {
