--- a/src/css/WalletForm.css
+++ b/src/css/WalletForm.css
@@ -1,18 +1,13 @@
-/* #root {
-  align-items: flex-start;
-  background-color: white;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  width: 100%;
-} */
-
 .form {
   align-items: center;
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
   display: flex;
   flex-direction: column;
-  margin-left: 50px;
-  margin-right: 50px;
+  max-width: 1037px;
+  width: 100%;
 }
 
 .label {
