--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -37,3 +37,25 @@
   font-weight: 500;
   text-align: center;
 }
+
+.buttonEditar {
+  background-color: rgb(38, 38, 128);
+  border: 1px solid rgb(38, 38, 128);
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  font-weight: 700;
+  padding: none;
+  width: 55px;
+}
+
+.buttonExcluir {
+  background-color: red;
+  border: 1px solid red;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  font-weight: 700;
+  padding: none;
+  width: 55px;
+}
