--- a/src/css/WalletForm.css
+++ b/src/css/WalletForm.css
@@ -92,8 +92,23 @@
 .button {
   background-color: #2fc18c;
   border: 1px solid #2fc18c;
-  border-radius: 5px;
+  border-radius: 5px;  
   color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+  height: 40px;
+  margin: 20px;
+  transition-duration: 0.4s;
+  width: 330px;
+}
+
+.button:active {
+  background-color: blue;
+  border: 1px solid blue;
+  border-radius: 5px;  
+  color: white;
+  cursor: pointer;
   font-size: 1rem;
   font-weight: 700;
   height: 40px;
